--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
               <!-- <p>I am an undergraduate student at the  <a href="https://www.cs.tsinghua.edu.cn/csen/">Department of Computer Science and Technology</a>,  <a href="https://www.tsinghua.edu.cn/en/">Tsinghua University</a>.  https://scholar.google.com/citations?user=bspSfNEAAAAJ&hl=en
               </p> -->
               <!-- <p>Final-year undergraduate at the  <a href="https://www.cs.tsinghua.edu.cn/csen/">DCST</a>,  <a href="https://www.tsinghua.edu.cn/en/">Tsinghua University</a>. -->
-              <p>I am a second-year master student in the Data and Artificial Intelligence at Institut Polytecnique de Paris (IP Paris). Previously, I obtained my bachelor's degree in Computer Science and Technology from the Beijing Institute of Technology (BIT). I was fortunate to be advised by Prof. Li Yi at IIIS, Tsinghua University (THU). My research interests center around 3D Computer Vision and Computer Graphics.  
+              <p>I am a first-year master student in the Data and Artificial Intelligence at Institut Polytecnique de Paris (IP Paris). Previously, I obtained my bachelor's degree in Computer Science and Technology from the Beijing Institute of Technology (BIT). I was fortunate to be advised by Prof. Li Yi at IIIS, Tsinghua University (THU). My research interests center around 3D Computer Vision and Computer Graphics.  
               </p>
               <p style="text-align:center">
                 <a href="mailto:lingada60@gmail.com"> Email</a> &nbsp;/&nbsp;
@@ -132,15 +132,15 @@
               <br>
               <a href="https://taco2024.github.io/">project page</a>
               /
-              <a href="https://github.com/llada60/4DSegStreamer">code</a>
-              <!-- / -->
+              <a href="https://github.com/leolyliu/TACO-Instructions">code</a>
+              /
               <!-- <a href="https://huggingface.co/spaces/xymeow7/quasi-physical-sims">🤗demo</a>
               / -->
-              <!-- <a href="https://arxiv.org/abs/2502.09614">arXiv</a>
+              <a href="https://arxiv.org/pdf/2401.08399">arXiv</a>
               /
-              <a href="https://youtu.be/zru1Z-DaiWE">video</a>
+              <a href="https://youtu.be/bIgHylU1oZo">video</a>
               /
-              <a href="https://docs.google.com/presentation/d/17SH0lKlyUQ7wfOlWXHx-2zJJ13rqWs2A/edit?usp=sharing&ouid=103893738370724206774&rtpof=true&sd=true">slides</a> -->
+              <a href="https://www.dropbox.com/scl/fo/8w7xir110nbcnq8uo1845/AOaHUxGEcR0sWvfmZRQQk9g?rlkey=xnhajvn71ua5i23w75la1nidx&st=9t8ofde7&dl=0">dataset</a>
               <!-- /
               <a href="https://mp.weixin.qq.com/s/8p_dkDkXpb76TU-slstrnA">media</a> (in Chinese) -->
               <p></p>
