--- a/index.html
+++ b/index.html
@@ -42,9 +42,11 @@
                 <a href="mailto:lingada60@gmail.com"> Email</a> &nbsp;/&nbsp;
                 <a href="https://github.com/llada60">Github</a> &nbsp;/&nbsp;
                 <a href="https://scholar.google.com/citations?user=2l_Oa3YAAAAJ">Google Scholar
+                &nbsp;/&nbsp;
+                <a href="https://www.linkedin.com/in/ling-liu-0618b12bb">LinkedIn</a>
                 <!-- &nbsp;/&nbsp;
-                <a href="https://www.linkedin.com/in/ling-liu-0618b12bb">LinkedIn</a>&nbsp;/&nbsp;
-                <a href="https://x.com/LingAda3">Twitter</a> &nbsp;/&nbsp;
+                <a href="https://x.com/LingAda3">Twitter</a> 
+                &nbsp;/&nbsp;
                 <a href="images/wechat.jpg">WeChat</a> -->
               </p>
             </td>
@@ -58,19 +60,23 @@
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>Research</heading>
               <!-- <heading>Selected Publications</heading> -->
-              <!-- <p>
-              </p> -->
             </td>
           </tr>
         </tbody></table>
+          
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
 
-
+          <td style="padding-left:20px;vertical-align:middle">
+            <small>
+                <seq>*</seq>Equal Contribution <seq>&#8224;</seq>Corresponding Author
+            </small>
+          </td>
           <tr onmouseout="urf_stop()" onmouseover="urf_start()">
+            
             <td style="padding:20px;width:25%;vertical-align:middle">
 			        <div>
 			          <!-- <div class="two" id='refnerf_image'></div> -->
-			          <img src='static/images/4DSegStreamer1.png' width="160">
+			          <img src='static/images/4DSegStreamer_teaser.png' width="220">
                 <!-- <video autoplay muted loop playsinline width="200">
                   <source src="static/images/demo_video_vxx.mp4" type="video/mp4">
                 </video> -->
@@ -112,7 +118,7 @@
             <td style="padding:20px;width:25%;vertical-align:middle">
 			        <div>
 			          <!-- <div class="two" id='refnerf_image'></div> -->
-			          <img src='static/images/TACO_teaser.png' width="160">
+			          <img src='static/images/TACO_teaser.png' width="220">
                 <!-- <video autoplay muted loop playsinline width="200">
                   <source src="static/images/demo_video_vxx.mp4" type="video/mp4">
                 </video> -->
