--- a/index.html
+++ b/index.html
@@ -71,7 +71,48 @@
                 <seq>*</seq>Equal Contribution <seq>&#8224;</seq>Corresponding Author
             </small>
           </td>
-          
+          <tr onmouseout="urf_stop()" onmouseover="urf_start()">
+            
+            <td style="padding:20px;width:25%;vertical-align:middle">
+			        <div>
+			          <!-- <div class="two" id='refnerf_image'></div> -->
+			          <img src='static/images/4DSegStreamer_teaser.png' width="220">
+                <!-- <video autoplay muted loop playsinline width="200">
+                  <source src="static/images/demo_video_vxx.mp4" type="video/mp4">
+                </video> -->
+			        </div>
+			      </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+              <!-- <a href="https://autogpart.github.io/">
+                <papertitle>AutoGPart: Intermediate Supervision Search for Generalizable 3D Part Segmentation</papertitle>
+              </a> -->
+              <a href="https://llada60.github.io/4DSegStreamer">
+                <papertitle>4DSegStreamer: Streaming 4D Panoptic Segmentation via Dual Threads</papertitle>
+              </a>
+              <br>
+              <strong>Ling Liu*</strong>, Jun Tian*, Li Yi<sup>&#8224;</sup>
+              <br>
+							<em>ICCV</em>, 2025
+              <br>
+              <a href="https://llada60.github.io/4DSegStreamer">project page</a>
+              /
+              <a href="https://github.com/llada60/4DSegStreamer">code</a>
+              <!-- / -->
+              <!-- <a href="https://huggingface.co/spaces/xymeow7/quasi-physical-sims">🤗demo</a>
+              / -->
+              <!-- <a href="https://arxiv.org/abs/2502.09614">arXiv</a>
+              /
+              <a href="https://youtu.be/zru1Z-DaiWE">video</a>
+              /
+              <a href="https://docs.google.com/presentation/d/17SH0lKlyUQ7wfOlWXHx-2zJJ13rqWs2A/edit?usp=sharing&ouid=103893738370724206774&rtpof=true&sd=true">slides</a> -->
+              <!-- /
+              <a href="https://mp.weixin.qq.com/s/8p_dkDkXpb76TU-slstrnA">media</a> (in Chinese) -->
+              <p></p>
+              <p>
+								<strong>TL;DR</strong>: 
+                4DSegStreamer is a new framework that enables existing segmentation methods real-time capable, balancing efficiency and accuracy for dense perception in dynamic environments. </p>
+            </td>
+          </tr> 
 
           <tr onmouseout="urf_stop()" onmouseover="urf_start()">
             <td style="padding:20px;width:25%;vertical-align:middle">
