--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
   
   <meta name="author" content="Ling Liu">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
 	<!-- <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🌐</text></svg>"> -->
   <link rel="icon" href="./static/images/website-icon-round.png">
@@ -90,7 +89,7 @@
                 <papertitle>4DSegStreamer: Streaming 4D Panoptic Segmentation via Dual Threads</papertitle>
               </a>
               <br>
-              <strong>Ling Liu*</strong>, Jun Tian*, Li Yi<sup>&#8224;</sup>
+              <strong>Ling Liu*</strong>, Jun Tian*, <a href="https://ericyi.github.io/">Li Yi</a><sup>&#8224;</sup>
               <br>
 							<em>ICCV</em>, 2025
               <br>
@@ -132,7 +131,7 @@
                 <papertitle>TACO: Benchmarking Generalizable Bimanual Tool-ACtion-Object Understanding</papertitle>
               </a>
               <br>
-              Yun Liu, Haolin Yang, Xu Si, <strong>Ling Liu</strong>, Zipeng Li, Yuxiang Zhang, Yebin Liu, Li Yi<sup>&#8224;</sup>
+              Yun Liu, Haolin Yang, Xu Si, <strong>Ling Liu</strong>, Zipeng Li, Yuxiang Zhang, Yebin Liu, <a href="https://ericyi.github.io/">Li Yi</a><sup>&#8224;</sup>
               <br>
 							<em>CVPR</em>, 2024
               <br>
