--- a/index.html
+++ b/index.html
@@ -96,13 +96,11 @@
               <a href="https://llada60.github.io/4DSegStreamer">project page</a>
               /
               <a href="https://github.com/llada60/4DSegStreamer">code</a>
-              <!-- / -->
-              <!-- <a href="https://huggingface.co/spaces/xymeow7/quasi-physical-sims">🤗demo</a>
-              / -->
-              <!-- <a href="https://arxiv.org/abs/2502.09614">arXiv</a>
               /
-              <a href="https://youtu.be/zru1Z-DaiWE">video</a>
+              <a href="https://arxiv.org/abs/2510.17664">arXiv</a>
               /
+              <a href="https://www.youtube.com/watch?v=WE0DvkrRLAA&t=3s">video</a>
+              <!-- /
               <a href="https://docs.google.com/presentation/d/17SH0lKlyUQ7wfOlWXHx-2zJJ13rqWs2A/edit?usp=sharing&ouid=103893738370724206774&rtpof=true&sd=true">slides</a> -->
               <!-- /
               <a href="https://mp.weixin.qq.com/s/8p_dkDkXpb76TU-slstrnA">media</a> (in Chinese) -->
